# azura

./: .gitignore  CMakeLists.txt  azura.kdev4  azura.sln
.PVS-Studio/: depend_info.json
azura/: azura.vcxproj  azura.vcxproj.filters  base.cpp  base.h  employe_ctl.h  main.cpp  tour_ctl.h  tourist_ctl.cpp  tourist_ctl.h  tourists.txt  ui.h  ui_curses.cpp  ui_curses.h  ui_min.cpp  ui_min.h
src/: base.cpp  base.h  config.h  db_base.h  io.cpp  io.h  locale.cpp  locale.h  main.cpp  parsers.cpp  parsers.h  secure.cpp  secure.h
src/db/: db_tourist.cpp  employe_ctl.h  tour_ctl.cpp  tour_ctl.h  tourist_ctl.cpp  tourist_ctl.h
src/ui/: ui.h  ui_base.h  ui_curses.cpp  ui_curses.h  ui_min.cpp  ui_min.h  ui_win.h  ui_wx.cpp  ui_wx.h
